version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/SMARTCrackGrowth.rst.txt
.. vale off



:class:`SMARTCrackGrowth`
=========================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.SMARTCrackGrowth(internalObject: Any)
              SMARTCrackGrowth(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext)

   Bases: :py:obj:`object`


   
   Defines a SMARTCrackGrowth.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: SMARTCrackGrowth

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddCommandSnippet`
            - Creates a new CommandSnippet
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Analysis`
            - Gets the Analysis.
          * - :py:attr:`~AutomaticTimeStepping`
            - Gets or sets the AutomaticTimeStepping.
          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~CrackGrowthLaw`
            - Gets the CrackGrowthLaw.
          * - :py:attr:`~CrackGrowthMethodology`
            - Gets or sets the CrackGrowthMethodology.
          * - :py:attr:`~CrackGrowthOption`
            - Gets or sets the CrackGrowthOption.
          * - :py:attr:`~CriticalRate`
            - Gets or sets the CriticalRate.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~ElementSizeForCrackFront`
            - Gets or sets the ElementSizeForCrackFront.
          * - :py:attr:`~ElementSizeForLocalRegion`
            - Gets or sets the ElementSizeForLocalRegion.
          * - :py:attr:`~FailureCriteriaOption`
            - Gets or sets the FailureCriteriaOption.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~ImportableObjectSourceId`
            - ImportableObjectSourceId property.
          * - :py:attr:`~IncrementEndValue`
            - Gets or sets the IncrementEndValue.
          * - :py:attr:`~IncrementMultiplier`
            - Gets or sets the IncrementMultiplier.
          * - :py:attr:`~IncrementStartValue`
            - Gets or sets the IncrementStartValue.
          * - :py:attr:`~InitialCrack`
            - Gets or sets the InitialCrack.
          * - :py:attr:`~InitialTimeStep`
            - Gets or sets the InitialTimeStep.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~LocalRegionNamedSelection`
            - Gets or sets the LocalRegionNamedSelection.
          * - :py:attr:`~LocalRegionType`
            - Gets or sets the LocalRegionType.
          * - :py:attr:`~Material`
            - Gets or sets the Material.
          * - :py:attr:`~MaxIncrementOfCrackExtension`
            - Gets or sets the MaxIncrementOfCrackExtension.
          * - :py:attr:`~MaxIncrementValue`
            - Gets or sets the MaxIncrementValue.
          * - :py:attr:`~MaxIncrementValueTreatment`
            - Gets or sets the MaxIncrementValueTreatment.
          * - :py:attr:`~MaximumMultiplier`
            - Gets or sets the MaximumMultiplier.
          * - :py:attr:`~MaximumTimeStep`
            - Gets or sets the MaximumTimeStep.
          * - :py:attr:`~MeshCoarsening`
            - Gets or sets the MeshCoarsening.
          * - :py:attr:`~Method`
            - Gets the Method.
          * - :py:attr:`~MinIncrementControl`
            - Gets or sets the MinIncrementControl.
          * - :py:attr:`~MinIncrementOfCrackExtension`
            - Gets or sets the MinIncrementOfCrackExtension.
          * - :py:attr:`~MinIncrementValue`
            - Gets or sets the MinIncrementValue.
          * - :py:attr:`~MinIncrementValueTreatment`
            - Gets or sets the MinIncrementValueTreatment.
          * - :py:attr:`~MinimumTimeStep`
            - Gets or sets the MinimumTimeStep.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~NumberOfCycles`
            - Gets or sets the NumberOfCycles.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~ReadOnly`
            - Gets or sets the ReadOnly.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~StopAtMaxCrackExtensionValue`
            - Gets or sets the StopAtMaxCrackExtensionValue.
          * - :py:attr:`~StopCriterion`
            - Gets or sets the StopCriterion.
          * - :py:attr:`~StopValue`
            - Gets or sets the StopValue.
          * - :py:attr:`~StressRatio`
            - Gets or sets the StressRatio.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~TransferableObjectId`
            - TransferableObjectId property.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.







Property detail
---------------
.. py:property:: Analysis
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DelaminationType]


   
   Gets the Analysis.
















   ..
       !! processed by numpydoc !!

.. py:property:: AutomaticTimeStepping
   :type: Optional[Ansys.Mechanical.DataModel.Enums.AutomaticOrManual]


   
   Gets or sets the AutomaticTimeStepping.
















   ..
       !! processed by numpydoc !!

.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: CrackGrowthLaw
   :type: Optional[str]


   
   Gets the CrackGrowthLaw.
















   ..
       !! processed by numpydoc !!

.. py:property:: CrackGrowthMethodology
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CrackGrowthMethodology]


   
   Gets or sets the CrackGrowthMethodology.
















   ..
       !! processed by numpydoc !!

.. py:property:: CrackGrowthOption
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CrackGrowthOption]


   
   Gets or sets the CrackGrowthOption.
















   ..
       !! processed by numpydoc !!

.. py:property:: CriticalRate
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the CriticalRate.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementSizeForCrackFront
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the ElementSizeForCrackFront.
















   ..
       !! processed by numpydoc !!

.. py:property:: ElementSizeForLocalRegion
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the ElementSizeForLocalRegion.
















   ..
       !! processed by numpydoc !!

.. py:property:: FailureCriteriaOption
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DelaminationFailureCriteriaOption]


   
   Gets or sets the FailureCriteriaOption.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Figure]]


   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Image]]


   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: ImportableObjectSourceId
   :type: Optional[str]


   
   ImportableObjectSourceId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IncrementEndValue
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the IncrementEndValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: IncrementMultiplier
   :type: Optional[Ansys.Mechanical.DataModel.Enums.IncrementMultiplier]


   
   Gets or sets the IncrementMultiplier.
















   ..
       !! processed by numpydoc !!

.. py:property:: IncrementStartValue
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the IncrementStartValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: InitialCrack
   :type: Optional[Ansys.ACT.Automation.Mechanical.GenericCrack]


   
   Gets or sets the InitialCrack.
















   ..
       !! processed by numpydoc !!

.. py:property:: InitialTimeStep
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the InitialTimeStep.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSDelaminationAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: LocalRegionNamedSelection
   :type: Optional[Ansys.ACT.Automation.Mechanical.NamedSelection]


   
   Gets or sets the LocalRegionNamedSelection.
















   ..
       !! processed by numpydoc !!

.. py:property:: LocalRegionType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LocalRegionType]


   
   Gets or sets the LocalRegionType.
















   ..
       !! processed by numpydoc !!

.. py:property:: Material
   :type: Optional[str]


   
   Gets or sets the Material.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaxIncrementOfCrackExtension
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CrackGrowthIncrementType]


   
   Gets or sets the MaxIncrementOfCrackExtension.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaxIncrementValue
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the MaxIncrementValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaxIncrementValueTreatment
   :type: Optional[Ansys.Mechanical.DataModel.Enums.IncrementTreatment]


   
   Gets or sets the MaxIncrementValueTreatment.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumMultiplier
   :type: Optional[float]


   
   Gets or sets the MaximumMultiplier.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaximumTimeStep
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the MaximumTimeStep.
















   ..
       !! processed by numpydoc !!

.. py:property:: MeshCoarsening
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CrackGrowthMeshCoarsening]


   
   Gets or sets the MeshCoarsening.
















   ..
       !! processed by numpydoc !!

.. py:property:: Method
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DelaminationMethod]


   
   Gets the Method.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinIncrementControl
   :type: Optional[Ansys.Mechanical.DataModel.Enums.IncrementControl]


   
   Gets or sets the MinIncrementControl.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinIncrementOfCrackExtension
   :type: Optional[Ansys.Mechanical.DataModel.Enums.CrackGrowthIncrementType]


   
   Gets or sets the MinIncrementOfCrackExtension.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinIncrementValue
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the MinIncrementValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinIncrementValueTreatment
   :type: Optional[Ansys.Mechanical.DataModel.Enums.IncrementTreatment]


   
   Gets or sets the MinIncrementValueTreatment.
















   ..
       !! processed by numpydoc !!

.. py:property:: MinimumTimeStep
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the MinimumTimeStep.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfCycles
   :type: Optional[int]


   
   Gets or sets the NumberOfCycles.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: ReadOnly
   :type: Optional[bool]


   
   Gets or sets the ReadOnly.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: StopAtMaxCrackExtensionValue
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the StopAtMaxCrackExtensionValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: StopCriterion
   :type: Optional[Ansys.Mechanical.DataModel.Enums.StopCriterion]


   
   Gets or sets the StopCriterion.
















   ..
       !! processed by numpydoc !!

.. py:property:: StopValue
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Gets or sets the StopValue.
















   ..
       !! processed by numpydoc !!

.. py:property:: StressRatio
   :type: Optional[float]


   
   Gets or sets the StressRatio.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[bool]


   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: TransferableObjectId
   :type: Optional[str]


   
   TransferableObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddCommandSnippet() -> Ansys.ACT.Automation.Mechanical.CommandSnippet

   
   Creates a new CommandSnippet

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: str) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]
               GetChildren(category: Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory, recurses: bool, children: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool
               IsPropertyEditable(propName: str) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool
               IsPropertyVisible(propName: str) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on